fill simple text

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,10 @@
     "plugins": ["react", "prettier"],
     "parser": "babel-eslint",
     "rules": {
-        "prettier/prettier": ["error", { "arrowParens": "avoid", "tabWidth": 4, "printWidth": 120 }],
+        "prettier/prettier": [
+            "error",
+            { "arrowParens": "avoid", "tabWidth": 4, "printWidth": 120, "endOfLine": "auto" }
+        ],
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
         "no-console": "warn",
         "react/react-in-jsx-scope": "off"
