--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
         ],
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
         "no-console": "warn",
-        "react/react-in-jsx-scope": "off"
+        "react/react-in-jsx-scope": "off",
+        "no-absolute-path": true
     }
 }
