--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
         "no-console": "warn",
         "react/react-in-jsx-scope": "off",
-        "no-absolute-path": true
+        "no-absolute-path": 0,
+        "import/no-extraneous-dependencies": ["error", { "devDependencies": true }]
     }
 }
