--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,7 @@
         "no-console": "warn",
         "react/react-in-jsx-scope": "off",
         "no-absolute-path": 0,
-        "import/no-extraneous-dependencies": ["error", { "devDependencies": true }]
+        "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
+        "no-debugger": "warn"
     }
 }
