--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,7 @@
         "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
         "no-debugger": "warn",
         "react/jsx-props-no-spreading": "off",
-        "react/no-children-prop": "off"
+        "react/no-children-prop": "off",
+        "no-extra-boolean-cast": "off"
     }
 }
