--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,7 @@
         "no-debugger": "warn",
         "react/jsx-props-no-spreading": "off",
         "react/no-children-prop": "off",
-        "no-extra-boolean-cast": "off"
+        "no-extra-boolean-cast": "off",
+        "no-underscore-dangle": "off"
     }
 }
