--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,7 @@
         "react/jsx-props-no-spreading": "off",
         "react/no-children-prop": "off",
         "no-extra-boolean-cast": "off",
-        "no-underscore-dangle": "off"
+        "no-underscore-dangle": "off",
+        "no-unused-expressions": "off"
     }
 }
