--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,13 @@
         "react/no-children-prop": "off",
         "no-extra-boolean-cast": "off",
         "no-underscore-dangle": "off",
-        "no-unused-expressions": "off"
+        "no-unused-expressions": [
+            "error",
+            {
+                "allowShortCircuit": true,
+                "allowTernary": true,
+                "allowTaggedTemplates": true
+            }
+        ]
     }
 }
