login and logout functional

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,6 +35,7 @@
                 "allowTernary": true,
                 "allowTaggedTemplates": true
             }
-        ]
+        ],
+        "object-shorthand": "off"
     }
 }
